--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --experimental-modules index.js"
+    "app": "node --experimental-modules index.js"
   },
   "type": "module",
   "author": "Guilherme Dias de Carvalho",
